# Maya-VertexColorPainter

./: Qt.py  README.md  README_zh.md  VertexColorPainter.mod  compile.py  pyproject.toml  setup.cfg  spherePaint.mel  test_cmd.py  vertex_color_painter.py  vertex_color_painter.ui  vertex_color_painter_ui.py
plug-ins/: verter_color_painter.py  vertex_color_painter.py
scripts/: Qt.py  userSetup.py
